RESOLVED FIXED275839
[Win] ASSERTION FAILED: !m_ptr under MediaPlayerPrivateMediaFoundation::startCreateMediaSource
https://bugs.webkit.org/show_bug.cgi?id=275839
Summary [Win] ASSERTION FAILED: !m_ptr under MediaPlayerPrivateMediaFoundation::start...
Fujii Hironori
Reported 2024-06-24 22:49:11 PDT
[Win] ASSERTION FAILED: !m_ptr under MediaPlayerPrivateMediaFoundation::startCreateMediaSource Regressions: Unexpected crashes (4) media/track/in-band/track-in-band-kate-ogg-cues-added-once.html [ Crash ] media/track/in-band/track-in-band-kate-ogg-kind.html [ Crash ] media/track/in-band/track-in-band-kate-ogg-language.html [ Crash ] media/track/in-band/track-in-band-kate-ogg-track-order.html [ Crash ] ASSERTION FAILED: !m_ptr C:\webkit\wb\Source\WebCore\platform\win\COMPtr.h(74) : T **COMPtr<IMFSourceResolver>::operator&() [T = IMFSourceResolver] 1 00007FFB9BD6AB68 COMPtr<IMFSourceResolver>::operator& 2 00007FFB9BD5B039 WebCore::MediaPlayerPrivateMediaFoundation::startCreateMediaSource 3 00007FFB9BD5AF95 WebCore::MediaPlayerPrivateMediaFoundation::load 4 00007FFB9BD6DACA WebCore::MediaPlayerPrivateInterface::load 5 00007FFB9FC7588B WebCore::MediaPlayer::loadWithNextMediaEngine 6 00007FFB9FC75426 WebCore::MediaPlayer::load 7 00007FFB9EEBCBA3 WebCore::HTMLMediaElement::setNetworkState::<lambda_15>::operator()<std::experimental::fundamentals_v3::expected<WebCore::ContentType,WebCore::PlatformMediaError> > 8 00007FFB9EEBC9ED std::invoke<`lambda at C:\webkit\wb\Source\WebCore\html\HTMLMediaElement.cpp:2836:64',std::experimental::fundamentals_v3::expected<WebCore::ContentType,WebCore::PlatformMediaError> > 9 00007FFB9EEBC9BD WTF::NativePromise<WebCore::ContentType,WebCore::PlatformMediaError,0>::invokeWithVoidOrWithArg<`lambda at C:\webkit\wb\Source\WebCore\html\HTMLMediaElement.cpp:2836:64',std::experimental::fundamentals_v3::expected<WebCore::ContentType,WebCore::PlatformMediaError> > 10 00007FFB9EEBC98F WTF::NativePromise<WebCore::ContentType,WebCore::PlatformMediaError,0>::whenSettled<`lambda at C:\webkit\wb\Source\WebCore\html\HTMLMediaElement.cpp:2836:64'>::<lambda_1>::operator() 11 00007FFB9EEBC911 WTF::Detail::CallableWrapper<`lambda at C:\webkit\wb\WebKitBuild\Debug\WTF\Headers\wtf\NativePromise.h:1024:23',void,std::experimental::fundamentals_v3::expected<WebCore::ContentType,WebCore::PlatformMediaError> &&>::call 12 00007FFB9EEE108A WTF::Function<void (std::experimental::fundamentals_v3::expected<WebCore::ContentType,WebCore::PlatformMediaError> &&)>::operator() 13 00007FFB9EEE092D WTF::NativePromise<WebCore::ContentType,WebCore::PlatformMediaError,0>::ThenCallback<0,void>::processResult 14 00007FFB9EEF5CE8 WTF::NativePromise<WebCore::ContentType,WebCore::PlatformMediaError,0>::ThenCallbackBase::dispatch::<lambda_1>::operator() 15 00007FFB9EEF57B7 WTF::Detail::CallableWrapper<`lambda at C:\webkit\wb\WebKitBuild\Debug\WTF\Headers\wtf\NativePromise.h:752:37',void>::call 16 00007FFBF765A93E WTF::Function<void ()>::operator() 17 00007FFBF76E319A WTF::RunLoop::performWork 18 00007FFBF77D8370 WTF::RunLoop::wndProc 19 00007FFBF77D82A7 WTF::RunLoop::RunLoopWndProc 20 00007FFC803889A1 DispatchMessageW 21 00007FFC80388461 DispatchMessageW 22 00007FFBF77D854D WTF::RunLoop::run 23 00007FFBA394A453 WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess,1>::run 24 00007FFBA394A307 WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWin> 25 00007FFBA394A1DE WebKit::WebProcessMain 26 00007FF64510124C main 27 00007FF6451018C0 __scrt_common_main_seh 28 00007FFC801D257D BaseThreadInitThunk 29 00007FFC81CEAF28 RtlUserThreadStart ERROR: 000002587182C170 - [PID=14004] WebProcessProxy::didClose (web process crash) C:\webkit\wb\Source\WebKit\UIProcess/WebProcessProxy.cpp(1186) : virtual void WebKit::WebProcessProxy::didClose(IPC::Connection &) ERROR: 000002587182C170 - [PID=14004] WebProcessProxy::processDidTerminateOrFailedToLaunch: reason=Crash C:\webkit\wb\Source\WebKit\UIProcess/WebProcessProxy.cpp(1194) : void WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch(ProcessTerminationReason) ERROR: 000002586C583E90 - [pageProxyID=8, webPageID=9, PID=14004] WebPageProxy::processDidTerminate: (pid 14004), reason=Crash C:\webkit\wb\Source\WebKit\UIProcess/WebPageProxy.cpp(9786) : void WebKit::WebPageProxy::resetStateAfterProcessTermination(ProcessTerminationReason) ERROR: 000002586C583E90 - [pageProxyID=8, webPageID=9, PID=14004] WebPageProxy::dispatchProcessDidTerminate: reason=Crash C:\webkit\wb\Source\WebKit\UIProcess/WebPageProxy.cpp(9844) : void WebKit::WebPageProxy::dispatchProcessDidTerminate(ProcessTerminationReason) WebProcess terminated (pid 14004) for reason: crash
Attachments
Fujii Hironori
Comment 1 2024-06-24 23:28:08 PDT
After https://commits.webkit.org/276258@main started content type sniffing, MediaPlayerPrivateMediaFoundation::load can be called twice.
Fujii Hironori
Comment 2 2024-06-24 23:34:53 PDT
EWS
Comment 3 2024-06-25 01:02:39 PDT
Committed 280323@main (38a3872d6bcb): <https://commits.webkit.org/280323@main> Reviewed commits have been landed. Closing PR #30138 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2024-06-25 01:03:15 PDT
Note You need to log in before you can comment on or make changes to this bug.