[Win] ASSERTION FAILED: !m_ptr under MediaPlayerPrivateMediaFoundation::startCreateMediaSource https://bugs.webkit.org/show_bug.cgi?id=275839

Reviewed by Ross Kirsling.

After <https://commits.webkit.org/276258@main>, some media tests were
crashing due to an asertion failure for Windows port, for example
media/track/in-band/track-in-band-kate-ogg-kind.html.

The assertion checks m_sourceResolver is null in
startCreateMediaSource method. However, after the change started
content type sniffing, startCreateMediaSource can be called twice.
m_sourceResolver wasn't null in the second time.

MediaPlayerPrivateMediaFoundation class doesn't have to retain
m_sourceResolver. Make it a local variable of startCreateMediaSource
method.

* Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
* Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.h:

Canonical link: https://commits.webkit.org/280323@main